# bininfo

./: .gitignore  CMakeLists.txt  README.md
cmake/: GenerateHeaderWithTestData.cmake
src/: CMakeLists.txt
src/common/: CMakeLists.txt  types.hpp
src/formats/: CMakeLists.txt
src/formats/pe/: CMakeLists.txt  pe_description.cpp  pe_description.hpp  pe_description_internal.hpp  pe_reader.cpp  pe_reader.hpp
tests/: CMakeLists.txt
tests/common/: CMakeLists.txt  test_endian.cpp
tests/data/fmt/elf/x86/gcc-4.7/: 1.cpp  compile_sample_cpp.sh
tests/data/fmt/pe/x86/msvc-2008/: 1.cpp  compile_sample_cpp.bat
tests/fmt/pe/: CMakeLists.txt  main.cpp  pe_reader_tests.cpp
tests/fmt/pe/mocks/: pe_reader_notifier_mock.hpp
